ASOC-46798 : Filter visibility issues fixed (#2072)
* Filter visibility issues fixed

* Code review implemented

* Tests has been updated

* updated the error message in the text filters

* code review implemented

--- a/investigate-hosts/app/styles/investigate-hosts/components/host-list/_host-table.scss
+++ b/investigate-hosts/app/styles/investigate-hosts/components/host-list/_host-table.scss
@@ -38,7 +38,7 @@
 .host-table__toolbar-buttons {
   float: right;
   .rsa-form-button-wrapper {
-    padding: rsa-whitespace(less);
+    margin: rsa-whitespace(less);
   }
 }
 
