--- a/investigate-hosts/app/styles/investigate-hosts/components/host-list/content-filter/_datetime-filter.scss
+++ b/investigate-hosts/app/styles/investigate-hosts/components/host-list/content-filter/_datetime-filter.scss
@@ -13,7 +13,7 @@
       }
       &__content {
         padding: rsa-whitespace();
-        max-width: 34rem!important;        
+        max-width: 36rem!important;        
         .body {
           float: left;
           text-align: left;
